add first sentences for the main page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example HTML File</title>
+    <title>Robust Design Optimization Package: RODOP+</title>
     <style>
         /* CSS styles can be added here */
         body {
@@ -33,12 +33,24 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Example Website</h1>
+        <h1>Robust Design Optimization Package: RODOP+</h1>
     </header>
     <section>
-        <h2>About Us</h2>
-        <p>This is a simple example HTML file. You can modify it to suit your needs.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sagittis euismod justo vel tempus. Cras at arcu non ligula fringilla gravida.</p>
+        <h2>About RODOP+</h2>
+        <p>RODOP+ is a design optimization software, which is suitable for non-linear optimization 
+            problems, where the objective function and/or design constraints are evaluated by performing 
+            computationally expensive simulation processes. 
+         </p>
+        <p>
+            <ul>
+                <li>Global constrained optimization </li>
+                <li>Machine learning based data-driven approach</li>
+                <li>Gradient enhancement</li>             
+                <li>Mixed-integer optimization </li> 
+                <li>Hyper-parameter optimization for expensive machine learning models </li>
+                <li>Constraints as black-box proccesses and/or user defined functions (UDFs)</li>
+            </ul>
+        </p>
     </section>
     <footer>
         <p>&copy; 2024 Example Website. All rights reserved.</p>
