--- a/tutorials.html
+++ b/tutorials.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>RODOP+</title>
+    <title>Robust Design Optimization Package: RODOP+</title>
 </head>
 
 <body>
@@ -14,12 +14,12 @@
           <h2>MySite</h2>
         </div>
         <ul class="nav-links">
-          <li><a href="./docs.html">Docs</a></li>
-          <li><a href="./tutorials.html">Tutorials</a></li>
+          <li><a href="document.html">Docs</a></li>
+          <li><a href="tutorials.html">Tutorials</a></li>
         </ul>
       </nav>
     <section>
-        <h1>About RODOP+</h1>
+        <h2>About RODOP+</h2>
         <p>RODOP+ is a design optimization software, which is suitable for non-linear optimization 
             problems, where the objective function and/or design constraints are evaluated by performing 
             computationally expensive simulation processes. 
