added one tutorial page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="nav-left">
-          <img src="https://via.placeholder.com/40" alt="Logo">
-          <h2>MySite</h2>
+          <img id = "logo-on-navbar" src= "./images/logo-wo-background.png" alt="Logo">
         </div>
         <ul class="nav-links">
           <li><a href="./docs.html">Docs</a></li>
@@ -35,6 +34,11 @@
             </ul>
         </p>
     </section>
+
+    <section>
+        <img id = "pareto-gif" src="./images/pareto.gif" alt="demo animation">
+    </section>
+
     <footer>
         <p>&copy; 2025. All rights reserved.</p>
     </footer>
