--- a/tutorials.html
+++ b/tutorials.html
@@ -10,30 +10,22 @@
 <body>
     <nav class="navbar">
         <div class="nav-left">
-          <img src="https://via.placeholder.com/40" alt="Logo">
-          <h2>MySite</h2>
+          <img id = "logo-on-navbar" src= "./images/logo-wo-background.png" alt="Logo">
         </div>
         <ul class="nav-links">
-          <li><a href="document.html">Docs</a></li>
-          <li><a href="tutorials.html">Tutorials</a></li>
+          <li><a href="./docs.html">Docs</a></li>
+          <li><a href="./tutorials.html">Tutorials</a></li>
         </ul>
       </nav>
     <section>
-        <h2>About RODOP+</h2>
-        <p>RODOP+ is a design optimization software, which is suitable for non-linear optimization 
-            problems, where the objective function and/or design constraints are evaluated by performing 
-            computationally expensive simulation processes. 
-         </p>
-        <p>
-            <ul>
-                <li>Global constrained optimization </li>
-                <li>Machine learning based data-driven approach</li>
-                <li>Gradient enhancement</li>             
-                <li>Mixed-integer optimization </li> 
-                <li>Hyper-parameter optimization for expensive machine learning models </li>
-                <li>Constraints as black-box proccesses and/or user defined functions (UDFs)</li>
-            </ul>
-        </p>
+       
+        <ul, id = "tutorial-list">
+
+            <li><a href="./Rosenbrock_constrained.html"> Constrained optimization of the 2D Rosenbrock function </a> </li>
+
+
+        </ul>
+
     </section>
     <footer>
         <p>&copy; 2025. All rights reserved.</p>
