--- a/Rosenbrock_constrained.html
+++ b/Rosenbrock_constrained.html
@@ -39,7 +39,7 @@
       backdrop-filter: blur(8px);
       border-bottom: 1px solid var(--border);
     }
-    .container { max-width: 980px; margin: 0 auto; padding: 1rem; }
+    .container { max-width: 1500px; margin: 0 auto; padding: 1rem; }
     .title { margin: .2rem 0 0; font-size: clamp(1.6rem, 2.5vw, 2.2rem); }
     .subtitle { color: var(--muted); margin-top: .25rem; }
 
@@ -54,7 +54,17 @@
       padding: 1rem;
     }
 
-    img.responsive { max-width: 100%; height: auto; display: block; border-radius: 10px; border: 1px solid var(--border); }
+
+    img.centered {
+  display: block;         /* required for margin auto to work */
+  margin-inline: auto;    /* center horizontally */
+  height: auto;
+  max-width: 100%;
+  border-radius: 10px;
+  border: 1px solid var(--border, #e5e7eb);
+}
+
+    img.responsive { max-width: 50%; height: auto; display: block; border-radius: 10px; border: 1px solid var(--border); }
 
     pre, code {
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -75,8 +85,10 @@
 <body>
   <header>
     <div class="container">
-      <h1 class="title">Rosenbrock with Nonlinear Constraints (2D)</h1>
-      <p class="subtitle">Example minimizing the 2D Rosenbrock function with two external nonlinear constraints.</p>
+      <h1 class="title">Minimizing the Rosenbrock function with Nonlinear Constraints</h1>
+      <p class="subtitle">Example minimizing the 2D Rosenbrock function with two external nonlinear constraints. This test case mimics a design optimization problem, 
+        where the objective function depends on two continuous parameters and is restricted by two constraints.
+      </p>
     </div>
   </header>
 
@@ -86,16 +98,54 @@
       <p>In this turoial, the <strong>2D Rosenbrock function</strong> is minimized with two external non-linear constraints. The optimization problem is:</p>
       <p>$$\text{minimize}\quad f(x_1, x_2) = (1 - x_1)^2 + 100\,(x_2 - x_1^2)^2$$</p>
       <p>$$\text{subject to}\quad x_2 - x_1^2 > 0,\quad (x_1 - 1)^3 - x_2 + 0.7 > 0,\\ -1.5 \le x_1 \le 1.5\;\;\text{and}\;\; -0.5 \le x_2 \le 2.5.$$</p>
-      <p>The contour plot below shows the objective; the shaded region indicates feasibility.</p>
-      <img src="./images/rosenbrock.png" alt="Rosenbrock function contours with feasible region shaded" class="responsive" />
+      <p>The contour plot below shows the objective function; the shaded region indicates the feasible region.</p>
+      <img src="./images/rosenbrock.png" alt="Rosenbrock function contours with feasible region shaded" class="responsive centered" />
     </section>
 
     <section id="xml-file" class="panel">
       <h2>Preparing the xml configuration file</h2>
-      <p>Run the optimization from a terminal:</p>
-      <pre><code>python runOptimization.py</code></pre>
-      <p class="note">This generates <code>optimizationHistory.csv</code>, containing samples from the Design of Experiments (DoE) phase and the optimization iterations.</p>
-    </section>
+      <p> Before running the optimization, we need to prapare an xml file. Each optimization study is denoted by the <code>&ltoptimization_study&gt</code> tag in the xml file.</p>
+
+      <p> Within this tag, we have a section where the general settings for the optimization study are specified. The parameters for this section are:</p>
+      <ol>
+        <il> The name of the problem: Denoted by the <code> &ltname&gt</code> </il> <br> 
+        <il> Problem dimension: Denoted by the <code> &ltdimension&gt</code> </il> <br>
+        <il> Number of function evaluations: Denoted by the <code> &ltnumber_of_function_evaluations&gt</code>. This parameter specifies how many samples are allowed in the optimization process.  </il> <br>
+        <il> Maximum number of inner iterations (optional): <code> &ltmax_number_of_inner_iterations&gt</code>. This parameter specifies the number of inner iterations used while maximizing the acqusition function. </il> <br>
+        <il> Number of threads: Denoted by <code> &ltnumber_of_threads&gt</code></il>
+      </ol>
+
+      <p> For our problem, the general settings section is:</p> 
+      <pre><code> 
+        &lt;general_settings&gt;
+          &lt;name&gt;ROSENBROCK&lt;/name&gt;
+          &lt;type&gt;Optimization&lt;/type&gt;
+          &lt;dimension&gt;2&lt;/dimension&gt;
+          &lt;number_of_function_evaluations&gt;50&lt;/number_of_function_evaluations&gt;
+          &lt;max_number_of_inner_iterations&gt;200000&lt;/max_number_of_inner_iterations&gt;
+        &lt;general_settings&gt</code></pre>
+   
+
+
+    <p> The next step in the xml file is the section where optimization paramters are specified. This section is marked by the <code>&ltoptimization_parameters&gt</code> tag. 
+      Within this section an optimization parameters is specified using the <code>&parameter&gt</code> tag. For our example, the first optimization parameter is given as  
+    
+    </p>
+
+    <pre><code> 
+      &lt;parameter&gt;
+        &lt;name&gt;x1&lt;/name&gt;
+        &lt;type&gt;REAL&lt;/type&gt;
+        &lt;lower_bound&gt;-1.5&lt;/lower_bound&gt;
+        &lt;upper_bound&gt;1.5&lt;/upper_bound&gt;
+    &lt;/parameter&gt;
+  </code></pre>
+
+<p>The lower and upper bounds of the variable is set using the <code>&ltlower_bound&gt</code> and <code>&ltupper_bound&gt</code> tags. The parameter is allowed be change continously during the optimization
+so its type is set using the <code>&lttype&gt</code> tag.</p>
+
+  </section> 
+
 
     <section id="run" class="panel">
       <h2>Running the test case</h2>
@@ -108,17 +158,9 @@
       <h2>Plotting the results</h2>
       <p>Create the result plots with:</p>
       <pre><code>python plotResults.py</code></pre>
-      <img src="./images/optimizationResults.png" alt="Optimization trajectory and results for Rosenbrock with constraints" class="responsive" />
+      <img src="./images/optimizationResults.png" alt="Optimization trajectory and results for Rosenbrock with constraints" class="responsive centered" />
     </section>
 
-    <section id="setup" class="panel">
-      <h2>Optional: Quick setup</h2>
-      <pre><code>python -V            # recommend Python 3.9+
-python -m venv .venv
-source .venv/bin/activate    # Windows: .venv\Scripts\activate
-pip install -r requirements.txt
-</code></pre>
-    </section>
 
 
     <section id="xml" class="panel">
