--- a/navbar.html
+++ b/navbar.html
@@ -5,8 +5,8 @@
 
   <ul class="nav-links">
     <li>
-      <a href="/index.html">
-        <img class="nav-icon" src="/images/home.svg" alt="Home icon" /> Home
+      <a href="/index.html" aria-label="Home">
+        <img class="nav-icon" src="/images/home.svg" alt="Home" />
       </a>
     </li>
     <li><a href="/docs.html">Docs</a></li>
