--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      fetch("./navbar.html")
+      fetch("navbar.html")
         .then(r => r.text())
         .then(html => {
           const slot = document.getElementById("navbar-container");
