--- a/navbar.html
+++ b/navbar.html
@@ -1,15 +1,15 @@
 <nav class="navbar" aria-label="Primary">
-  <a class="nav-left" href="/index.html" aria-label="RODOP+ home">
-    <img id="logo-on-navbar" src="/images/logo-wo-background.png" alt="RODOP+ logo" />
+  <a class="nav-left" href="index.html" aria-label="RODOP+ home">
+    <img id="logo-on-navbar" src="images/logo-wo-background.png" alt="RODOP+ logo" />
   </a>
 
   <ul class="nav-links">
     <li>
-      <a href="/index.html" aria-label="Home">
-        <img class="nav-icon" src="/images/home.svg" alt="Home" />
+      <a href="index.html" aria-label="Home">
+        <img class="nav-icon" src="images/home.svg" alt="Home" />
       </a>
     </li>
-    <li><a href="/docs.html">Docs</a></li>
-    <li><a href="/tutorials.html">Tutorials</a></li>
+    <li><a href="docs.html">Docs</a></li>
+    <li><a href="tutorials.html">Tutorials</a></li>
   </ul>
 </nav>
