--- a/navbar.html
+++ b/navbar.html
@@ -11,5 +11,6 @@
     </li>
     <li><a href="docs.html">Docs</a></li>
     <li><a href="tutorials.html">Tutorials</a></li>
+    <li><a href="talks.html">Talks</a></li>
   </ul>
 </nav>
